[storybook | fix] overflow-y -> auto

--- a/src/global.scss
+++ b/src/global.scss
@@ -25,6 +25,10 @@
 @import "~@ionic/angular/css/text-transformation.css";
 @import "~@ionic/angular/css/flex-utils.css";
 
+.sb-show-main.sb-main-fullscreen {
+	overflow-y: auto;
+}
+
 .item__icon {
 	svg {
 		width: 60px;
